--- a/modules/app/src/main/res/layouts/activities/registerActivity/layout/account_creation_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/registerActivity/layout/account_creation_activity_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/gradient_background"
-        tools:context=".activities.implementations.register.AccountCreationActivity">
+        tools:context=".activities.implementations.register.accountCreation.AccountCreationActivity">
 
         <TextView
             android:layout_width="wrap_content"
