--- a/modules/app/src/main/res/layouts/activities/registerActivity/layout/student_profile_creation_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/registerActivity/layout/student_profile_creation_activity_layout.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="studentProfile"
-            type="com.lonn.studentassistant.viewModels.authentication.StudentProfileData" />
+            type="com.lonn.studentassistant.firebaselayer.viewModels.StudentViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -125,7 +125,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{studentProfile.year}" />
+                    android:text="@{studentProfile.cycleSpecializationYear.toString()}" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -196,7 +196,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="@string/phone_number"
+                    android:hint="@string/email2"
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
                     android:text="@={studentProfile.email}" />
