--- a/modules/app/src/main/res/layouts/activities/registerActivity/layout/token_check_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/registerActivity/layout/token_check_activity_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/gradient_background"
-        tools:context=".activities.implementations.register.AccountCreationActivity">
+        tools:context=".activities.implementations.register.accountCreation.AccountCreationActivity">
 
         <TextView
             android:id="@+id/tokenCheckActivityTitle"
@@ -55,6 +55,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tokenCheckActivityTokenEditText"
+            android:onClick="checkToken"
             android:text="Continue"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
