--- a/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_profile_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_profile_layout.xml
@@ -13,11 +13,11 @@
             type="com.lonn.studentassistant.firebaselayer.viewModels.ProfessorViewModel" />
 
         <variable
-            name="optionalCourses"
+            name="personalCourses"
             type="java.util.Collection&lt;com.lonn.studentassistant.firebaselayer.viewModels.CourseViewModel&gt;" />
 
         <variable
-            name="myOtherActivities"
+            name="personalOtherActivities"
             type="java.util.Collection&lt;com.lonn.studentassistant.firebaselayer.viewModels.OtherActivityViewModel&gt;" />
 
         <variable
@@ -157,7 +157,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:categoryTitle="@{`My optional courses`}"
-                    android:childEntities="@{optionalCourses}"
+                    android:childEntities="@{personalCourses}"
                     android:entityName="@{`optional course`}"
                     android:permissionLevel="@{1}"
                     android:showEmpty="@{true}" />
@@ -166,7 +166,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:categoryTitle="@{`My activities`}"
-                    android:childEntities="@{myOtherActivities}"
+                    android:childEntities="@{personalOtherActivities}"
                     android:entityName="@{`activity`}"
                     android:permissionLevel="@{1}"
                     android:showEmpty="@{true}" />
