--- a/modules/app/src/main/res/layouts/activities/registerActivity/layout/administrator_profile_creation_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/registerActivity/layout/administrator_profile_creation_activity_layout.xml
@@ -120,7 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:onClick="tapCredentialsCheckButton"
+            android:onClick="tapContinue"
             android:text="@string/continue_step"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
